# PythonFinance

./: DivBook.py  DividendWorkBook.xls  DividendWorkBook.xlsx  PyStock.py  main.py  pyproject.toml  stockList.txt
